refa:调整样式并增加 message 提示

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   text-align: center;
   display: flex;
+  height: calc(100vh - 100px);
   align-content: center;
   flex-direction: column;
   justify-content: space-evenly;
